--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "^13.5.6",
+    "next-seo": "^6.4.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
