--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "^13.5.6",
@@ -17,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal-video": "^2.0.0",
-    "react-scroll": "^1.9.0"
+    "react-router-dom": "^6.18.0",
+    "react-scroll": "^1.9.0",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
